# dual-channel-transport-protocol

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cli/: receive.py  send.py
src/dctp/: __init__.py  packet.py  receiver.py  sender.py  transport.py  types.py
src/utils/: time.py
tests/: test_init.py
tests/dctp/: test_init.py  test_packet.py  test_receiver.py  test_sender.py
